fixed overlapping borders of div elements

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   font-size: 1.6rem;
   width: 60rem;
   margin: 0 auto;
-  margin-top: 8rem;
+  margin-top: 6rem;
   background-color: rgb(241, 218, 7);
 }
 
@@ -29,5 +29,6 @@ body {
   height: 2rem;
   width: 2rem;
   background-color: green;
-  border: 0.2rem solid #000;
+  border: 0.1rem solid #000;
+  box-sizing: content-box;
 }
